@@ -1,5 +1,9 @@
 2004-08-27 Hasso Tepper <hasso at quagga.net>
 
+	* vtysh.c: Make "terminal length <0-512>" command work in vtysh.
+
+2004-08-27 Hasso Tepper <hasso at quagga.net>
+
 	* vtysh.c: Enable using ssh from ENABLE_NODE.
 	* vtysh_config.c: Make enable password uniq lines appear only once in
 	  configuration.
