@@ -1,3 +1,8 @@
+2004-08-27 Hasso Tepper <hasso at quagga.net>
+
+	* command.c: Install "terminal length" commands only if vty is used.
+	  Vtysh will handle it itself.
+
 2004-08-26  Greg Troxel  <gdt@fnord.ir.bbn.com>
 
 	* sockopt.h: Define method-independent macro for callers of
